fix: spacing of credits on medium size screens

--- a/frontend/src/app/features/spellchecker/spellchecker.component.scss
+++ b/frontend/src/app/features/spellchecker/spellchecker.component.scss
@@ -93,6 +93,7 @@
         }
 
         .credits {
+          margin-top: 0;
           max-width: 200px;
         }
       }
@@ -122,6 +123,7 @@
         }
 
         .credits {
+          margin-top: 24px;
           max-width: unset;
         }
       }
